1차 프로토타입 정리